@@ -39,8 +39,8 @@ extern "C" { BirnetThread *bse_sequencer_thread = NULL; }
 
 using namespace std;
 
-static SFI_MSG_TYPE_DEFINE (debug_sequencer, "sequencer", SFI_MSG_DEBUG, NULL);
-#define DEBUG(...)      sfi_debug (debug_sequencer, __VA_ARGS__)
+#define SEQTRACE(...)   do { if (UNLIKELY (bse_trace_args.sequencer)) \
+                               sfi_debug_channel_printf (bse_trace_args.sequencer, NULL, __VA_ARGS__); } while (0)
 
 #define	BSE_SEQUENCER_FUTURE_BLOCKS    (7)
 
@@ -404,7 +404,7 @@ bse_sequencer_thread_lagging (guint n_blocks)
 static void
 bse_sequencer_thread_main (gpointer data)
 {
-  DEBUG ("SST: start\n");
+  SEQTRACE ("SEQ: thread-start\n");
   sfi_thread_set_wakeup (sequencer_wake_up, NULL, NULL);
   bse_message_setup_thread_handler();
   BSE_SEQUENCER_LOCK ();
@@ -450,7 +450,7 @@ bse_sequencer_thread_main (gpointer data)
     }
   while (bse_sequencer_poll_Lm (-1));
   BSE_SEQUENCER_UNLOCK ();
-  DEBUG ("SST: end\n");
+  SEQTRACE ("SEQ: thread-end\n");
 }
 
 static void
@@ -544,11 +544,11 @@ bse_sequencer_process_track_SL (BseTrack        *track,
   if (!part && next)
     {
       part = bse_track_get_part_SL (track, next, &start, &next);
-      // DEBUG ("track[%u]: advancing to first part: %p", start_tick, part);
+      SEQTRACE ("SEQ:trck: jump ahead to part: start_tick=%u part=%p", start_tick, part);
     }
   if (!part || (next == 0 && start + part->last_tick_SL < start_tick))
     {
-      DEBUG ("track[%u]: could be done: %p==NULL || %u < %u (next=%u)", start_tick, part, start + (part ? part->last_tick_SL : 0), start_tick, next);
+      SEQTRACE ("SEQ:trck: checking done state: start_tick=%u next=%u done=(%p==NULL || %u < %u)", start_tick, next, part, start + (part ? part->last_tick_SL : 0), start_tick);
       track->track_done_SL = !bse_midi_receiver_voices_pending (midi_receiver, track->midi_channel_SL);
       part = NULL;
     }
@@ -599,9 +599,9 @@ bse_sequencer_process_part_SL (BsePart         *part,
                                           freq);
           bse_midi_receiver_push_event (midi_receiver, eon);
           bse_midi_receiver_push_event (midi_receiver, eoff);
-          DEBUG ("note: %llu till %llu freq=%f (note=%d velocity=%f)",
-                 eon->delta_time, eoff->delta_time, freq,
-                 note->note, note->velocity);
+          SEQTRACE ("SEQ:note: n=%-3d v=%02x on=%llu off=%llu freq=% 10f now=%llu",
+                    note->note, bse_ftoi (note->velocity * 128),
+                    eon->delta_time, eoff->delta_time, freq, gsl_tick_stamp());
           note++;
         }
     }
@@ -617,8 +617,8 @@ bse_sequencer_process_part_SL (BsePart         *part,
                                                        bse_dtoull (start_stamp + (node->tick - start_tick) * stamps_per_tick),
                                                        BseMidiSignalType (cev->ctype), cev->value);
           bse_midi_receiver_push_event (midi_receiver, event);
-          DEBUG ("control: %llu signal=%d (value=%f)",
-                 event->delta_time, cev->ctype, cev->value);
+          SEQTRACE ("SEQ:ctrl: tick=%llu signal=%-3d value=%f now=%llu",
+                    event->delta_time, cev->ctype, cev->value, gsl_tick_stamp());
         }
       node++;
     }
